log
Fri, May 16, 2025  9:45:08 PM: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  9:47:50 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:15: error: implicit declaration of function 'addToList' [-Werror=implicit-function-declaration]
               addToList(list,newNode);
               ^~~~~~~~~
cc1.exe: all warnings being treated as errors
8f9d7df
Fri, May 16, 2025  9:49:50 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e17a6ef
